# voice_translator

./: .gitignore  AGENTS.md  README.md  overlay.html  package-lock.json  package.json  vite.config.ts
.github/instructions/: frontend.instructions.md  rust-backend.instructions.md
.github/prompts/: add-translation-engine.prompt.md
.github/workflows/: ci.yml
experiments/qwen3-asr-poc/: Cargo.toml  README.md
experiments/qwen3-asr-poc/src/: main.rs
experiments/route-a-llm-correction/: neutral.txt  test.ps1  test2.ps1  tests.txt  variants.txt
scripts/: analyze_transcript.ps1
src/: App.css  App.tsx  main.tsx  overlay-main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen-icon.ps1  icon.icns
src-tauri/src/: asr.rs  capture.rs  config.rs  denoise.rs  lib.rs  main.rs  pipeline.rs  segmenter.rs  transcript.rs  translate.rs
src/components/: HistoryPanel.tsx  Overlay.tsx  SettingsPanel.tsx  SubtitleView.tsx  SummaryPanel.tsx
