[package]
name = "voice_translator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
reqwest = { version = "0.13.4", features = ["json", "multipart", "blocking", "form", "query"] }
nnnoiseless = { version = "0.5.2", default-features = false }
# 进程内 ASR + VAD：sherpa-onnx（SenseVoice 识别 + Silero VAD，静态链接，无需运行期 DLL/sidecar）
# 注：VAD 也用 sherpa 自带，避免再引入第二份 onnxruntime（与 sherpa 静态库符号冲突）。
sherpa-onnx = "1.13.2"
# 本地时间命名会话译文文件（YYYY-MM-DD_HHmmss）；clock 特性提供 Local
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# 离线语种识别（纯 Rust，无网络/系统依赖）：仅用于 LLM 译文「是否还是原文那语种」的兜底判断。
whatlang = "0.16"

# WASAPI 仅 Windows（系统音频环回 + 麦克风，开箱即用）
[target.'cfg(windows)'.dependencies]
wasapi = "0.23.0"

# 麦克风采集（跨平台）：macOS / Linux 用 cpal；Windows 仍走上面的 WASAPI。
# 系统音频环回：macOS 用 ScreenCaptureKit，Linux 用 PulseAudio/PipeWire monitor 源（cpal）。
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
cpal = "0.15"

# macOS 系统音频采集：ScreenCaptureKit。
# 固定 0.3.x：该系列依赖干净(block2/core-foundation/core-graphics/objc 等成熟 crate)，
# 不引入 7.x 的 apple-metal Swift bridge —— 后者在 GitHub macOS runner 的 SDK 上编译失败。
# core-media-rs 提供音频回调里的 CMSampleBuffer / AudioBufferList 类型。
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
core-media-rs = "0.3"

